# cadical-interface

./: CMakeLists.txt
include/: cadical_solver.hpp
python/: CMakeLists.txt  bindings.cpp
src/: cadical_solver.cpp  interrupt.cpp  interrupt.hpp
